[package]
name = "dynamic_terrain"
version = "0.1.0"
edition = "2021"

[dependencies]
fastnoise-lite = "1.1.1"
three-d = "0.18.0"
three-d-asset = { version="0.9.0", features = ["png", "jpeg", "http"] }
image = "0.25.5"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }